# mastodon-bookmark-rss

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  buildscript.js  fly.toml  package-lock.json  package.json
.github/workflows/: build-image.yml  test.yml
docs/: deploy.md
src/: app.css  app.js  app.ts  app.tsx  index.html  main.rs
src/svelte/: App.svelte
