[package]
name = "mastodon-bookmark-rss"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/untitaker/mastodon-bookmark-rss"
repository = "https://github.com/untitaker/mastodon-bookmark-rss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["query"] }
chrono = "0.4.23"
http = "0.2.8"
once_cell = "1.17.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower_governor = "0.0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
