[package]
name = "mastodon-bookmark-rss"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/untitaker/mastodon-bookmark-rss"
repository = "https://github.com/untitaker/mastodon-bookmark-rss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["query"] }
chrono = "0.4.23"
http = "0.2.8"
once_cell = "1.17.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
thiserror = "1.0.38"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.0"
# https://github.com/benwis/tower-governor/pull/39
# https://github.com/benwis/tower-governor/issues/38
tower_governor = { version = "0.4.0", git = "https://github.com/benwis/tower-governor", branch = "main" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
